[package]
name = "bkernel"
version = "0.0.1"
authors = ["Alexey Shmalko <rasen.dubi@gmail.com>"]

[lib]
name = "kernel"
crate-type = ["lib", "staticlib"]

[dependencies]
futures = { version = "0.1", default-features = false }
dev = { path = "./dev" }

[dependencies.stm32f4]
path = "./stm32f4"

[dependencies.smalloc]
path = "./smalloc"

[dependencies.linkmem]
path = "./linkmem"

[dependencies.breactor]
path = "./breactor"

[profile.release]
opt-level = 3
lto = true
debug = true
debug-assertions = false
panic = 'abort'