[package]
name = "dev"
version = "0.0.1"
authors = ["Alexey Shmalko <rasen.dubi@gmail.com>"]
edition = "2018"

[lib]
name = "dev"
path = "lib.rs"

[dependencies]
breactor = { path = "../breactor" }
futures = { package = "futures-preview", version = "0.3.0-alpha.16", default-features = false }
stm32f4 = { path = "../stm32f4" }